--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT = 3002
+MONGO_DB_URI = "mongodb+srv://sridhar:eCommerce6%401500067@e-commerce.mtnpj.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
