--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
+    "gravatar": "^1.8.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.13"
+    "mongoose": "^6.0.13",
+    "normalize-url": "^7.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
