Some bugs needs to fixed for conroller

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
+NODE_ENV = DEVELOPMENT
 PORT = 3002
 MONGO_DB_URI = "mongodb+srv://sridhar:eCommerce6%401500067@e-commerce.mtnpj.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+JWT_SECRET = eCommerce6@1500067
+LOCAL_DB = "mongodb://localhost:27017/E-commerce"
