--- a/.env
+++ b/.env
@@ -1,5 +1,16 @@
 NODE_ENV = DEVELOPMENT
 PORT = 3002
 MONGO_DB_URI = "mongodb+srv://sridhar:eCommerce6%401500067@e-commerce.mtnpj.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+
 JWT_SECRET = eCommerce6@1500067
+JWT_TOKEN_EXPIRES_TIME = 7days
+COOKIE_EXPIRE_TIME = 7
+
+SMTP_HOST = smtp.mailtrap.io
+SMTP_PORT = 2525
+SMTP_EMAIL = 6ac1f8d865c245
+SMTP_PASSWORD = 0423a6cf073c58
+SMTP_FROM_EMAIL = noreplay@Ecommerce.com
+SMTP_FROM_NAME = Ecommerce
+
 LOCAL_DB = "mongodb://localhost:27017/E-commerce"
